overwrite the selectize.less "overflow: auto" with "overflow: inherit" to fix height difference between bootstrap and selectize input

--- a/src/less/selectize.bootstrap3.less
+++ b/src/less/selectize.bootstrap3.less
@@ -97,6 +97,7 @@
 }
 
 .selectize-input {
+	overflow: inherit;
 	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	min-height: @input-height-base;
